[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <Krisz#9444>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord-webhook = "^0.15.0"
Flask = "^2.0.3"
python-dotenv = "^0.20.0"
discord = "^1.7.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"